[gd_scene load_steps=11 format=3 uid="uid://cvm1x6igaprq3"]

[ext_resource type="Script" uid="uid://ba1l1kqe7yxt6" path="res://addons/player/Player.gd" id="1_cyojo"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xc2g5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wydro"]

[sub_resource type="Animation" id="Animation_by45h"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Neck/Camera3D:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Neck/Camera3D:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Neck/Camera3D:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_kgtn1"]
resource_name = "jump"
length = 0.8
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Neck/Camera3D:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 3, 0, 2),
"points": PackedFloat32Array(0, 0, 0, 0.023466667, 0, -0.017453292, -0.029600002, 0.0016087238, 0.029600002, -0.0016087238, 0.0052359877, -0.058, 0, 0.058, 0, 0, -0.07733333, 0, 0, 0),
"times": PackedFloat32Array(0, 0.0704, 0.4544, 0.8)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Neck/Camera3D:rotation:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 2, 0, 2),
"points": PackedFloat32Array(0, 0, 0, 0.023466667, 0, -0.008726646, -0.023466667, 0, 0.16586667, 0, 0.0034906585, -0.16586667, 0, 0.07733333, 0, 0, -0.07733333, 0, 0, 0),
"times": PackedFloat32Array(0, 0.0704, 0.4544, 0.8)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Neck/Camera3D:rotation:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 2, 0, 2),
"points": PackedFloat32Array(0, 0, 0, 0.023466667, 0, 0.0034906585, -0.023466667, 0, 0.16586667, 0, -0.0017453292, -0.16586667, 0, 0.07733333, 0, 0, -0.07733333, 0, 0, 0),
"times": PackedFloat32Array(0, 0.0704, 0.4544, 0.8)
}

[sub_resource type="Animation" id="Animation_n47sy"]
resource_name = "land"
length = 0.8
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Neck/Camera3D:rotation:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 2),
"points": PackedFloat32Array(0, 0, 0, 0.023466667, 0, -0.008726646, -0.023466667, 0, 0.128, 0, 0.0034906585, -0.128, 0, 0.115200005, 0, 0, -0.115200005, 0, 0, 0),
"times": PackedFloat32Array(0, 0.0704, 0.4544, 0.8)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_by45h"]
_data = {
&"RESET": SubResource("Animation_by45h"),
&"jump": SubResource("Animation_kgtn1"),
&"land": SubResource("Animation_n47sy")
}

[sub_resource type="Animation" id="Animation_3br5i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FootSteps:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0l22m"]
resource_name = "footsteps"
length = 0.65
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FootSteps:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3br5i"]
_data = {
&"RESET": SubResource("Animation_3br5i"),
&"footsteps": SubResource("Animation_0l22m")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_cyojo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
layers = 524288
mesh = SubResource("CapsuleMesh_xc2g5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_wydro")

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.679, 0)

[node name="Neck" type="Node3D" parent="Head"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="Head/Neck"]
unique_name_in_owner = true
cull_mask = 524287
current = true

[node name="RayCast3D" type="RayCast3D" parent="Head/Neck/Camera3D"]
target_position = Vector3(0, 0, -2)
collision_mask = 2
collide_with_areas = true

[node name="CameraAnimationPlayer" type="AnimationPlayer" parent="Head"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_by45h")
}

[node name="FootSteps" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="FootStepsAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_3br5i")
}
autoplay = "footsteps"
